--- a/index.html
+++ b/index.html
@@ -5,12 +5,149 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panda Commerce</title>
+  <!-- Favicon Link -->
+  <link rel="icon" href="images/panda-logo.png" type="image/gif" sizes="16x16">
   <!-- Bootstrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Link Stylesheet -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
- 
-  
+  <!-- Header Area Start -->
+  <header>
+    <!-- Menu Area Start -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand d-flex align-items-center brand-logo" href="#">
+          <img src="images/panda-logo.png" alt="" width="41" height="27" class="d-inline-block">
+          <span class="ms-1">PANDA</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Product</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+            </li>
+        </div>
+      </div>
+    </nav>
+    <!-- Menu Area End -->
+    <!-- Banner Area Start -->
+    <section class="banner-area">
+      <div class="container">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner p-5 bg-banner radius">
+            <div class="carousel-item active">
+              <div class="row d-flex align-items-center">
+                <div class="col-7">
+                  <h1 class="carousel-title">Mi LED TV 4A PRO 32</h1>
+                  <p class="w-75" class="w-75">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </p>
+                  <span class="d-block price">$1289</span>
+                  <a href="#" class="btn btn-cust b-b btn-cust">BUY NOW</a>
+                </div>
+                <div class="col-5">
+                  <div class="b-img">
+                    <img src="images/banner-images/headphone.png"  class="w-100 h-100 img-fit" alt="Headphone">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row d-flex align-items-center">
+                <div class="col-7">
+                  <h1 class="carousel-title">Mi LED TV 4A PRO 32</h1>
+                  <p class="w-75">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </p>
+                  <span class="d-block price">$1289</span>
+                  <a href="#" class="btn btn-cust b-b btn-cust">BUY NOW</a>
+                </div>
+                <div class="col-5">
+                  <div class="b-img">
+                    <img src="images/banner-images/xbox.png"  class="w-100 h-100 img-fit" alt="Headphone">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row d-flex align-items-center">
+                <div class="col-7">
+                  <h1 class="carousel-title">Mi LED TV 4A PRO 32</h1>
+                  <p class="w-75">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </p>
+                  <span class="d-block price">$1289</span>
+                  <a href="#" class="btn btn-cust b-b btn-cust">BUY NOW</a>
+                </div>
+                <div class="col-5">
+                  <div class="b-img">
+                    <img src="images/banner-images/tv.png" class="w-100 h-100 img-fit" alt="Headphone">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Banner Area End -->
+  </header>
+  <!-- Header Area End -->
+  <!-- Main Area Start -->
+  <main>
+    <!-- categories Area Start -->
+    <section class="categories my-5">
+      <div class="container">
+        <div class="categories-content mx-4">
+          <h2 class="section-title">Categories</h2>
+          <div class="row mt-4">
+            <div class="col-4 px-3">
+              <div class="cat-bg-1 d-flex justify-content-between align-items-center py-2 px-4 radius .cat-bg-1">
+                <span class="categori-title text-light">Watch</span>
+                <div class="cat-img">
+                  <img src="images/categories/watch.png" alt="" class="w-100 h-100">
+                </div>
+              </div>
+            </div>
+            <div class="col-4 px-3">
+              <div class="cat-bg-2 d-flex justify-content-between align-items-center py-2 px-4 radius .cat-bg-1">
+                <span class="categori-title text-light">Watch</span>
+                <div class="cat-img">
+                  <img src="images/categories/bag.png" alt="" class="w-100 h-100">
+                </div>
+              </div>
+            </div>
+            <div class="col-4 px-3">
+              <div class="cat-bg-3 d-flex justify-content-between align-items-center py-2 px-4 radius .cat-bg-1">
+                <span class="categori-title text-light">Watch</span>
+                <div class="cat-img">
+                  <img src="images/categories/shoes.png" alt="" class="w-100 h-100">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- categories Area End -->
+  </main>
+  <!-- Main Area End -->
+  <!-- Footer Area Start -->
+  <footer></footer>
+  <!-- Footer Area End -->
 
   <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
