All Section Complete Simple

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
                   <span class="d-block price">$1289</span>
-                  <a href="#" class="btn btn-cust b-b btn-cust">BUY NOW</a>
+                  <a href="#" class="btn btn-cust b-b btn-cust btn-hover">BUY NOW</a>
                 </div>
                 <div class="col-5">
                   <div class="b-img">
@@ -73,7 +73,7 @@
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
                   <span class="d-block price">$1289</span>
-                  <a href="#" class="btn btn-cust b-b btn-cust">BUY NOW</a>
+                  <a href="#" class="btn btn-cust b-b btn-hover">BUY NOW</a>
                 </div>
                 <div class="col-5">
                   <div class="b-img">
@@ -90,7 +90,7 @@
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
                   <span class="d-block price">$1289</span>
-                  <a href="#" class="btn btn-cust b-b btn-cust">BUY NOW</a>
+                  <a href="#" class="btn btn-cust b-b btn-cust btn-hover">BUY NOW</a>
                 </div>
                 <div class="col-5">
                   <div class="b-img">
@@ -111,11 +111,11 @@
     <!-- categories Area Start -->
     <section class="categories my-5">
       <div class="container">
-        <div class="categories-content mx-4">
+        <div class="categories-content mx-5">
           <h2 class="section-title">Categories</h2>
           <div class="row mt-4">
             <div class="col-4 px-3">
-              <div class="cat-bg-1 d-flex justify-content-between align-items-center py-2 px-4 radius .cat-bg-1">
+              <div class="cat-bg-1 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
                 <div class="cat-img">
                   <img src="images/categories/watch.png" alt="" class="w-100 h-100">
@@ -123,7 +123,7 @@
               </div>
             </div>
             <div class="col-4 px-3">
-              <div class="cat-bg-2 d-flex justify-content-between align-items-center py-2 px-4 radius .cat-bg-1">
+              <div class="cat-bg-2 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
                 <div class="cat-img">
                   <img src="images/categories/bag.png" alt="" class="w-100 h-100">
@@ -131,7 +131,7 @@
               </div>
             </div>
             <div class="col-4 px-3">
-              <div class="cat-bg-3 d-flex justify-content-between align-items-center py-2 px-4 radius .cat-bg-1">
+              <div class="cat-bg-3 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
                 <div class="cat-img">
                   <img src="images/categories/shoes.png" alt="" class="w-100 h-100">
@@ -143,12 +143,120 @@
       </div>
     </section>
     <!-- categories Area End -->
+    <!-- Shoes Area Start -->
+    <section class="shoes py-5">
+      <div class="container">
+        <div class="shoes-content mx-5">
+          <div class="shoes-heading d-flex justify-content-between align-items-center">
+            <h2 class="section-title">Shoes</h2>
+            <a href="#" class="s-a">See All</a>
+          </div>
+          <div class="row mt-4">
+            <div class="col-4 px-3">
+              <div class="card radius border-0 text-center" >
+                <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title-d">Reebok Dart Men’s Shoes</h5>
+                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="d-block card-price my-3 p-0">$1289</span>
+                  <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 px-3">
+              <div class="card radius border-0 text-center" >
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title-d">Reebok Pump</h5>
+                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="d-block card-price my-3 p-0">$799</span>
+                  <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 px-3">
+              <div class="card radius border-0 text-center" >
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title-d">Reebok All Terrain</h5>
+                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="d-block card-price my-3 p-0">$699</span>
+                  <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Shoes Area End -->
+    <!-- Backpack Area Start -->
+    <section class="backpack py-5">
+      <div class="container">
+        <div class="shoes-content mx-5">
+          <div class="shoes-heading d-flex justify-content-between align-items-center">
+            <h2 class="section-title">Backpack</h2>
+            <a href="#" class="s-a">See All</a>
+          </div>
+          <div class="row mt-4">
+            <div class="col-4 px-3">
+              <div class="card radius border-0 text-center" >
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title-d">Ison Backpack</h5>
+                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="d-block card-price my-3 p-0">$1289</span>
+                  <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 px-3">
+              <div class="card radius border-0 text-center" >
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title-d">Biaowang Backpack</h5>
+                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="d-block card-price my-3 p-0">$799</span>
+                  <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 px-3">
+              <div class="card radius border-0 text-center" >
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title-d">Dxyizu WS54 Smart</h5>
+                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="d-block card-price my-3 p-0">$699</span>
+                  <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Backpack Area End -->
   </main>
   <!-- Main Area End -->
   <!-- Footer Area Start -->
-  <footer></footer>
+  <footer class="py-5">
+    <div class="container py-5 f-bg radius">
+      <div class="subscribe-area d-flex flex-column justify-content-center align-items-center py-5 my-5">
+        <div class="subscribe-content text-center">
+          <h2 class="section-title">LET'S STAY IN TOUCH</h2>
+          <p>Get updates on sales specials and more</p>
+        </div>
+        <form action="post" class="w-50">
+          <div class="input-group input-group-lg w-75 mx-auto">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+            <input type="button" value="Send" class="input-group-text btn btn-cust b-b btn-hover px-4" id="inputGroup-sizing-lg">
+          </div>
+        </form>
+      </div>
+    </div>
+  </footer>
   <!-- Footer Area End -->
-
   <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
