--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Menu Area Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand d-flex align-items-center brand-logo" href="#">
+        <a class="navbar-brand d-flex align-items-center brand-logo" href="index.html">
           <img src="images/panda-logo.png" alt="" width="41" height="27" class="d-inline-block">
           <span class="ms-1">PANDA</span>
         </a>
@@ -28,26 +28,26 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#hero">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Product</a>
+              <a class="nav-link active" aria-current="page" href="#product">Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About Us</a>
+              <a class="nav-link active" aria-current="page" target="_blank" href="https://www.facebook.com/sajeeb.programmer">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+              <a class="nav-link active" aria-current="page" href="#con-for">Contact Us</a>
             </li>
         </div>
       </div>
     </nav>
     <!-- Menu Area End -->
     <!-- Banner Area Start -->
-    <section class="banner-area">
+    <section id="hero" class="banner-area">
       <div class="container">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner p-5 bg-banner radius">
+          <div class="carousel-inner p-lg-5 p-md-4 p-4 bg-banner radius">
             <div class="carousel-item active">
               <div class="row d-flex align-items-center">
                 <div class="col-7">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-5">
                   <div class="b-img">
-                    <img src="images/banner-images/headphone.png"  class="w-100 h-100 img-fit" alt="Headphone">
+                    <img src="images/banner-images/headphone.png"  class="w-md-100 h-100 img-fit" alt="Headphone">
                   </div>
                 </div>
               </div>
@@ -68,7 +68,7 @@
             <div class="carousel-item">
               <div class="row d-flex align-items-center">
                 <div class="col-7">
-                  <h1 class="carousel-title">Mi LED TV 4A PRO 32</h1>
+                  <h1 class="carousel-title fs-1">Mi LED TV 4A PRO 32</h1>
                   <p class="w-75">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-5">
                   <div class="b-img">
-                    <img src="images/banner-images/xbox.png"  class="w-100 h-100 img-fit" alt="Headphone">
+                    <img src="images/banner-images/xbox.png"  class="w-md-100 h-100 img-fit" alt="Headphone">
                   </div>
                 </div>
               </div>
@@ -85,7 +85,7 @@
             <div class="carousel-item">
               <div class="row d-flex align-items-center">
                 <div class="col-7">
-                  <h1 class="carousel-title">Mi LED TV 4A PRO 32</h1>
+                  <h1 class="carousel-title fs-1">Mi LED TV 4A PRO 32</h1>
                   <p class="w-75">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-5">
                   <div class="b-img">
-                    <img src="images/banner-images/tv.png" class="w-100 h-100 img-fit" alt="Headphone">
+                    <img src="images/banner-images/tv.png" class="w-md-100 h-100 img-fit" alt="Headphone">
                   </div>
                 </div>
               </div>
@@ -111,10 +111,10 @@
     <!-- categories Area Start -->
     <section class="categories my-5">
       <div class="container">
-        <div class="categories-content mx-5">
+        <div class="categories-content mx-lg-5">
           <h2 class="section-title">Categories</h2>
-          <div class="row mt-4">
-            <div class="col-4 px-3">
+          <div class="row g-md-4 mt-4">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="cat-bg-1 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
                 <div class="cat-img">
@@ -122,7 +122,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 px-3">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="cat-bg-2 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
                 <div class="cat-img">
@@ -130,7 +130,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 px-3">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="cat-bg-3 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
                 <div class="cat-img">
@@ -144,26 +144,26 @@
     </section>
     <!-- categories Area End -->
     <!-- Shoes Area Start -->
-    <section class="shoes py-5">
-      <div class="container">
-        <div class="shoes-content mx-5">
+    <section id="product" class="shoes py-5">
+      <div class="container-md">
+        <div class="shoes-content mx-lg-5">
           <div class="shoes-heading d-flex justify-content-between align-items-center">
             <h2 class="section-title">Shoes</h2>
             <a href="#" class="s-a">See All</a>
           </div>
-          <div class="row mt-4">
-            <div class="col-4 px-3">
+          <div class="row g-4 mt-4">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title-d">Reebok Dart Men’s Shoes</h5>
+                  <h5 class="card-title-d ">Reebok Dart</h5>
                   <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$1289</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
               </div>
             </div>
-            <div class="col-4 px-3">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -174,7 +174,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 px-3">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -193,13 +193,13 @@
     <!-- Backpack Area Start -->
     <section class="backpack py-5">
       <div class="container">
-        <div class="shoes-content mx-5">
+        <div class="shoes-content mx-lg-5">
           <div class="shoes-heading d-flex justify-content-between align-items-center">
             <h2 class="section-title">Backpack</h2>
             <a href="#" class="s-a">See All</a>
           </div>
-          <div class="row mt-4">
-            <div class="col-4 px-3">
+          <div class="row g-md-4 mt-4">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -210,7 +210,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 px-3">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -221,7 +221,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 px-3">
+            <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -240,15 +240,15 @@
   </main>
   <!-- Main Area End -->
   <!-- Footer Area Start -->
-  <footer class="py-5">
-    <div class="container py-5 f-bg radius">
+  <footer id="con-for" class="py-5">
+    <div class="container py-lg-5 py-md-4 f-bg radius">
       <div class="subscribe-area d-flex flex-column justify-content-center align-items-center py-5 my-5">
         <div class="subscribe-content text-center">
           <h2 class="section-title">LET'S STAY IN TOUCH</h2>
           <p>Get updates on sales specials and more</p>
         </div>
         <form action="post" class="w-50">
-          <div class="input-group input-group-lg w-75 mx-auto">
+          <div class="input-group input-group-md w-lg-75 mx-auto">
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
             <input type="button" value="Send" class="input-group-text btn btn-cust b-b btn-hover px-4" id="inputGroup-sizing-lg">
           </div>
