--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Link Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
+  <!-- Link Responsive Stylesheet -->
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
   <!-- Header Area Start -->
@@ -49,52 +51,52 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner p-lg-5 p-md-4 p-4 bg-banner radius">
             <div class="carousel-item active">
-              <div class="row d-flex align-items-center">
-                <div class="col-7">
-                  <h1 class="carousel-title">Mi LED TV 4A PRO 32</h1>
-                  <p class="w-75" class="w-75">
+              <div class="row d-flex align-items-md-center">
+                <div class="col-md-7 col-12 order-md-0 order-2 text-center text-md-start">
+                  <h1 class="carousel-title hed">Mi LED TV 4A PRO 32</h1>
+                  <p class="w-75 pra d-none d-md-block">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
                   <span class="d-block price">$1289</span>
                   <a href="#" class="btn btn-cust b-b btn-cust btn-hover">BUY NOW</a>
                 </div>
-                <div class="col-5">
-                  <div class="b-img">
-                    <img src="images/banner-images/headphone.png"  class="w-md-100 h-100 img-fit" alt="Headphone">
+                <div class="col-md-5 col-12 order-md-0 order-1">
+                  <div class="b-img w-100">
+                    <img src="images/banner-images/headphone.png"  class="w-100 h-100 img-fit" alt="Headphone">
                   </div>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="row d-flex align-items-center">
-                <div class="col-7">
-                  <h1 class="carousel-title fs-1">Mi LED TV 4A PRO 32</h1>
-                  <p class="w-75">
+              <div class="row d-flex align-items-md-center">
+                <div class="col-md-7 col-12 order-md-0 order-2 text-center text-md-start">
+                  <h1 class="carousel-title hed">Mi LED TV 4A PRO 32</h1>
+                  <p class="w-75 pra d-none d-md-block">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
                   <span class="d-block price">$1289</span>
                   <a href="#" class="btn btn-cust b-b btn-hover">BUY NOW</a>
                 </div>
-                <div class="col-5">
-                  <div class="b-img">
-                    <img src="images/banner-images/xbox.png"  class="w-md-100 h-100 img-fit" alt="Headphone">
+                <div class="col-md-5 col-12 order-md-0 order-1">
+                  <div class="b-img w-100">
+                    <img src="images/banner-images/xbox.png"  class="w-100 h-100 img-fit" alt="Headphone">
                   </div>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <div class="row d-flex align-items-center">
-                <div class="col-7">
-                  <h1 class="carousel-title fs-1">Mi LED TV 4A PRO 32</h1>
-                  <p class="w-75">
+              <div class="row d-flex align-items-md-center">
+                <div class="col-md-7 col-12 order-md-0 order-2 text-center text-md-start">
+                  <h1 class="carousel-title hed">Mi LED TV 4A PRO 32</h1>
+                  <p class="w-75 pra d-none d-md-block">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                   </p>
                   <span class="d-block price">$1289</span>
                   <a href="#" class="btn btn-cust b-b btn-cust btn-hover">BUY NOW</a>
                 </div>
-                <div class="col-5">
-                  <div class="b-img">
-                    <img src="images/banner-images/tv.png" class="w-md-100 h-100 img-fit" alt="Headphone">
+                <div class="col-md-5 col-12 order-md-0 order-1">
+                  <div class="b-img w-100">
+                    <img src="images/banner-images/tv.png" class="w-100 h-100 img-fit" alt="Headphone">
                   </div>
                 </div>
               </div>
@@ -113,7 +115,7 @@
       <div class="container">
         <div class="categories-content mx-lg-5">
           <h2 class="section-title">Categories</h2>
-          <div class="row g-md-4 mt-4">
+          <div class="row g-md-4 g-4 mt-4">
             <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="cat-bg-1 d-flex justify-content-between align-items-center py-2 px-4 radius">
                 <span class="categori-title text-light">Watch</span>
@@ -157,7 +159,7 @@
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title-d ">Reebok Dart</h5>
-                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text pt-2 m-0 pra">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$1289</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
@@ -168,7 +170,7 @@
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title-d">Reebok Pump</h5>
-                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text pt-2 m-0 pra">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$799</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
@@ -179,7 +181,7 @@
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title-d">Reebok All Terrain</h5>
-                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text pt-2 m-0 pra">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$699</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
@@ -198,13 +200,13 @@
             <h2 class="section-title">Backpack</h2>
             <a href="#" class="s-a">See All</a>
           </div>
-          <div class="row g-md-4 mt-4">
+          <div class="row g-md-4 g-4 mt-4">
             <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="card radius border-0 text-center" >
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title-d">Ison Backpack</h5>
-                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text pt-2 m-0 pra">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$1289</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
@@ -215,7 +217,7 @@
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title-d">Biaowang Backpack</h5>
-                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text pt-2 m-0 pra">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$799</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
@@ -226,7 +228,7 @@
                 <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title-d">Dxyizu WS54 Smart</h5>
-                  <p class="card-text pt-2 m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text pt-2 m-0 pra">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <span class="d-block card-price my-3 p-0">$699</span>
                   <a href="#" class="btn btn-cust card-b card-btn-hover">BUY NOW</a>
                 </div>
