--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Link Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
-  <!-- Link Responsive Stylesheet -->
-  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
   <!-- Header Area Start -->
@@ -243,13 +241,13 @@
   <!-- Main Area End -->
   <!-- Footer Area Start -->
   <footer id="con-for" class="py-5">
-    <div class="container py-lg-5 py-md-4 f-bg radius">
-      <div class="subscribe-area d-flex flex-column justify-content-center align-items-center py-5 my-5">
+    <div class="container">
+      <div class="subscribe-area d-flex flex-column justify-content-center align-items-center py-5 f-bg radius">
         <div class="subscribe-content text-center">
-          <h2 class="section-title">LET'S STAY IN TOUCH</h2>
-          <p>Get updates on sales specials and more</p>
+          <h2 class="section-title hed">LET'S STAY IN TOUCH</h2>
+          <p class="pra">Get updates on sales specials and more</p>
         </div>
-        <form action="post" class="w-50">
+        <form action="post" class="w-md-50">
           <div class="input-group input-group-md w-lg-75 mx-auto">
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
             <input type="button" value="Send" class="input-group-text btn btn-cust b-b btn-hover px-4" id="inputGroup-sizing-lg">
