--- a/index.html
+++ b/index.html
@@ -242,17 +242,19 @@
   <!-- Footer Area Start -->
   <footer id="con-for" class="py-5">
     <div class="container">
-      <div class="subscribe-area d-flex flex-column justify-content-center align-items-center py-5 f-bg radius">
-        <div class="subscribe-content text-center">
-          <h2 class="section-title hed">LET'S STAY IN TOUCH</h2>
-          <p class="pra">Get updates on sales specials and more</p>
-        </div>
-        <form action="post" class="w-md-50">
-          <div class="input-group input-group-md w-lg-75 mx-auto">
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
-            <input type="button" value="Send" class="input-group-text btn btn-cust b-b btn-hover px-4" id="inputGroup-sizing-lg">
+      <div class="row mx-1 mx-md-0">
+        <div class="col-sm-12 f-bg radius py-5">
+          <div class="content text-center mx-auto py-5">
+            <h2 class="section-title hed">LET'S STAY IN TOUCH</h2>
+            <p class="pra">Get updates on sales specials and more</p>
+            <div class="input-group">
+              <input type="email" class="form-control" name="" placeholder="Enter your email">
+              <span class="input-group-btn">
+                <button class="btn btn-cust btn-hover cat-bg-2 px-4 rounded-start-0 f-btn-b-r" type="submit">SEND</button>
+              </span>
+            </div>
           </div>
-        </form>
+        </div>
       </div>
     </div>
   </footer>
