--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <div class="container">
       <div class="row mx-1 mx-md-0">
         <div class="col-sm-12 f-bg radius py-5">
-          <div class="content text-center mx-auto py-5">
+          <div class="content text-center mx-auto py-md-5">
             <h2 class="section-title hed">LET'S STAY IN TOUCH</h2>
             <p class="pra">Get updates on sales specials and more</p>
             <div class="input-group">
