--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   </main>
   <!-- Main Area End -->
   <!-- Footer Area Start -->
-  <footer id="con-for" class="py-5">
+  <footer id="con-for" class="py-4 py-md-5">
     <div class="container">
       <div class="row mx-1 mx-md-0">
         <div class="col-sm-12 f-bg radius py-5">
