--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Panda Commerce</title>
   <!-- Favicon Link -->
   <link rel="icon" href="images/panda-logo.png" type="image/gif" sizes="16x16">
+  <script src="https://kit.fontawesome.com/c1b2fb55c0.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Link Stylesheet -->
@@ -16,7 +17,7 @@
   <!-- Header Area Start -->
   <header>
     <!-- Menu Area Start -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center brand-logo" href="index.html">
           <img src="images/panda-logo.png" alt="" width="41" height="27" class="d-inline-block">
@@ -28,17 +29,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#hero">Home</a>
+              <a class="nav-link" aria-current="page" href="#hero">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#product">Product</a>
+              <a class="nav-link" aria-current="page" href="#product">Product</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" target="_blank" href="https://www.facebook.com/sajeeb.programmer">About Us</a>
+              <a class="nav-link" target="_blank" aria-current="page" href="https://www.facebook.com/sajeeb.programmer">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#con-for">Contact Us</a>
+              <a class="nav-link" aria-current="page" href="#con-for">Contact Us</a>
             </li>
+          </ul>
         </div>
       </div>
     </nav>
