--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="cat-bg-2 d-flex justify-content-between align-items-center py-2 px-4 radius">
-                <span class="categori-title text-light">Watch</span>
+                <span class="categori-title text-light">Bag</span>
                 <div class="cat-img">
                   <img src="images/categories/bag.png" alt="" class="w-100 h-100">
                 </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="col-lg-4 col-md-6 px-lg-3">
               <div class="cat-bg-3 d-flex justify-content-between align-items-center py-2 px-4 radius">
-                <span class="categori-title text-light">Watch</span>
+                <span class="categori-title text-light">Shoes</span>
                 <div class="cat-img">
                   <img src="images/categories/shoes.png" alt="" class="w-100 h-100">
                 </div>
