Font Awesome Link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Panda Commerce</title>
   <!-- Favicon Link -->
   <link rel="icon" href="images/panda-logo.png" type="image/gif" sizes="16x16">
+  <!-- Link Font Awesome -->
   <script src="https://kit.fontawesome.com/c1b2fb55c0.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
